Updated description and added Google Scholar icon. Updated CV

--- a/coursework.html
+++ b/coursework.html
@@ -377,6 +377,7 @@
   <footer class="centered-section" id="footer">
     <div class="container-fluid">
       <p>© 2021 Felipe del Canto</p>
+      <p>Icons by <a class="footer-link" href="https://jpswalsh.github.io/academicons/">Academicons</a> and <a class="footer-link" href="https://fontawesome.com">Font Awesome</a>
   </footer>
 
   <!-- @JS and Popper -->
