--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
   <!--@ Font Awesome -->
   <script src="https://kit.fontawesome.com/d1e054ce54.js" crossorigin="anonymous"></script>
 
+  <!--@ Academicons  -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+
   <!-- @Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -96,6 +99,7 @@
           <a href="http://github.com/pipeton8"><i class="personal-icon clickable-icon fab fa-github fa-lg"></i></a>
           <a href="mailto:felipe.delcanto@icloud.com"><i class="personal-icon clickable-icon fas fa-envelope fa-lg"></i></a>
           <a href="http://twitter.com/pipeton8"><i class="personal-icon clickable-icon fab fa-twitter fa-lg"></i></a>
+          <a href="https://scholar.google.com/citations?user=-aRgXigAAAAJ&hl=en"><i class="personal-icon clickable-icon ai ai-google-scholar ai-lg"></i></a>
           <a href="https://orcid.org/0000-0001-6427-5423"><i class="personal-icon clickable-icon fab fa-orcid fa-lg"></i></a>
         </div>
       </div>
@@ -109,7 +113,8 @@
           state-of-the-art Machine and Deep learning algorithms to make sense of unstructured data like text, images, videos, or sounds; 2) learn how to make causal inference with these tools, and 3) understand the role of these techniques in our
           society, specifically how they preserve our biases.
         </p>
-        <p>You can look at my <a href="documents/cv/Felipe Del Canto CV.pdf">CV here</a>.</p>
+
+        <p>I am currently working as a Staff Associate at Columbia Business School. You can look at my <a href="documents/cv/Felipe Del Canto CV.pdf">CV here</a>.</p>
       </div>
     </div>
   </section>
@@ -195,6 +200,7 @@
   <footer class="centered-section" id="footer">
     <div class="container-fluid">
       <p>© 2021 Felipe del Canto</p>
+      <p>Icons by <a class="footer-link" href="https://jpswalsh.github.io/academicons/">Academicons</a> and <a class="footer-link" href="https://fontawesome.com">Font Awesome</a>
   </footer>
 
   <!-- @JS and Popper -->
