--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <meta name="description" content="Felipe del Canto's personal page. Mathematician and Economist. My main interests are in the intersection between Computer Science and Economics.">
-  <meta name="keywords" content="Felipe, del Canto, Economics, Chile, Computer Science, Econ, CS">
+  <meta name="keywords" content="Felipe, del Canto, Monge, Economics, Chile, Computer Science, Econ, CS">
 
   <!-- @Icons -->
   <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
