Updated "About me" sections

--- a/index.html
+++ b/index.html
@@ -106,12 +106,10 @@
 
       <!-- @ Text -->
       <div class="about-me-text col-lg-7 col-md-6">
-        <p> I am a Mathematician and Economist from PUC-Chile. My current interests lie in the applications of AI and Machine Learning to social sciences problems, especially in Economics.
+        <p> I am a Mathematician and Economist from PUC-Chile. My current research interests focus on the impacts of technology advances, especially in the context of the digital economy.
         </p>
 
-        <p>In particular, I am looking to study: 1) the use of
-          state-of-the-art Machine and Deep learning algorithms to make sense of unstructured data like text, images, videos, or sounds; 2) learn how to make causal inference with these tools, and 3) understand the role of these techniques in our
-          society, specifically how they preserve our biases.
+        <p>In particular, I am interested in how current techonogical advances (e.g., generative AIs), might be impacting: 1) the way firms interact, 2) the productivity and mobility of labor, and 3) the complementarity/substitutability between labor and capital. I consider the digital economy, understood as the economy of digital goods and services, to be a perfect setting to search answers to these questions.
         </p>
 
         <p>I am currently working as a Staff Associate at Columbia Business School. You can look at my <a href="documents/cv/Felipe Del Canto CV.pdf">CV here</a>.</p>
