Update "About me" section

--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
   <!-- @ About me Section -->
   <section class="centered-section" id="about-me">
 
-    <!-- @ Image and Icons -->
     <div class="row g-0 container-fluid section-container">
 
+      <!-- @ Image and Icons -->
       <div class="image-container col-lg-5 col-md-6">
         <img class="title-image" src="images/felipe.jpg" alt="Felipe del Canto">
 
@@ -106,10 +106,10 @@
 
       <!-- @ Text -->
       <div class="about-me-text col-lg-7 col-md-6">
-        <p> I am a Mathematician and Economist from PUC-Chile. My current research interests focus on the impacts of technology advances, especially in the context of the digital economy.
+        <p> I am a Mathematician and Economist from PUC-Chile. My current research interests focus on the impacts of technology on competition and productivity, especially in the context of the digital economy.
         </p>
 
-        <p>In particular, I am interested in how current techonogical advances (e.g., generative AIs), might be impacting: 1) the way firms interact, 2) the productivity and mobility of labor, and 3) the complementarity/substitutability between labor and capital. I consider the digital economy, understood as the economy of digital goods and services, to be a perfect setting to search answers to these questions.
+        <p>In particular, I am interested in how current techonogical advances (e.g., generative AI), are impacting: 1) the way firms interact, 2) the productivity and mobility of labor, and 3) the complementarity/substitutability between labor and capital. I consider the digital economy, understood as the economy of digital goods and services, to be a perfect setting to search answers to these questions.
         </p>
 
         <p>I am currently working as a Staff Associate at Columbia Business School. You can look at my <a href="documents/cv/Felipe Del Canto CV.pdf">CV here</a>.</p>
