Update "About me" and working papers

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     gtag('config', 'G-C1ECHGQLBQ');
   </script>
 
+  <!-- Mastodon profile link -->
+  <a rel="me" href="https://econtwitter.net/@pipeton8">Mastodon</a>
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#navbar-spy-scroll" data-bs-offset="250" data-bs-method="offset">
@@ -109,7 +111,7 @@
         <p> I am a Mathematician and Economist from PUC-Chile. My current research interests focus on the impacts of technology on competition and productivity, especially in the context of the digital economy.
         </p>
 
-        <p>In particular, I am interested in how current techonogical advances (e.g., generative AI), are impacting: 1) the way firms interact, 2) the productivity and mobility of labor, and 3) the complementarity/substitutability between labor and capital. I consider the digital economy, understood as the economy of digital goods and services, to be a perfect setting to search answers to these questions.
+        <p>In particular, I am interested in how current techonogical advances (e.g., generative AI), are impacting: 1) the way firms interact, 2) the productivity and mobility of labor, and 3) the complementarity/substitutability between production inputs.
         </p>
 
         <p>I am currently working as a Staff Associate at Columbia Business School. You can look at my <a href="documents/cv/Felipe Del Canto CV.pdf">CV here</a>.</p>
@@ -149,13 +151,12 @@
         <!-- @You shall not stack: How not to measure interdimensional dependence among the poor -->
         <div class="research-element">
           <div class="mr-auto paper-title">
-            You shall not stack: How not to measure interdimensional dependence among the poor
-            </a>
+            The Micro Incidence of Macroeconomic Shocks: A Budget Set Approach
+            (<a class="paper-link" href="https://drive.google.com/file/d/1AqulbXwBO1506e0-QF6Ha9u1jQwXyPXw/view?usp=sharing">Slides</a>)
           </div>
-          <div class="mr-auto paper-journal">
-            2021
+          <div class="mr-auto paper-collaborators">
+            with <a class="collaborator-link" href="https://sites.google.com/view/john-grigsby">John Grigsby</a>, <a class="collaborator-link" href="http://www.eric-qian.com">Eric Qian</a> and <a class="collaborator-link" href="https://www.conor-walsh.com">Conor Walsh</a>
           </div>
-        </div>
       </div>
 
       <!-- @Other Research Papers -->
