Add Mastodon, update FA classes

--- a/index.html
+++ b/index.html
@@ -50,9 +50,6 @@
 
     gtag('config', 'G-C1ECHGQLBQ');
   </script>
-
-  <!-- Mastodon profile link -->
-  <a rel="me" href="https://econtwitter.net/@pipeton8">Mastodon</a>
 </head>
 
 <body data-bs-spy="scroll" data-bs-target="#navbar-spy-scroll" data-bs-offset="250" data-bs-method="offset">
@@ -98,11 +95,12 @@
         <img class="title-image" src="images/felipe.jpg" alt="Felipe del Canto">
 
         <div class="mt-1">
-          <a href="http://github.com/pipeton8"><i class="personal-icon clickable-icon fab fa-github fa-lg"></i></a>
-          <a href="mailto:felipe.delcanto@icloud.com"><i class="personal-icon clickable-icon fas fa-envelope fa-lg"></i></a>
-          <a href="http://twitter.com/pipeton8"><i class="personal-icon clickable-icon fab fa-twitter fa-lg"></i></a>
+          <a href="http://github.com/pipeton8"><i class="personal-icon clickable-icon fa-brands fa-github fa-lg"></i></a>
+          <a href="mailto:felipe.delcanto@icloud.com"><i class="personal-icon clickable-icon fa-solid fa-envelope fa-lg"></i></a>
+          <a href="http://twitter.com/pipeton8"><i class="personal-icon clickable-icon fa-brands fa-twitter fa-lg"></i></a>
           <a href="https://scholar.google.com/citations?user=-aRgXigAAAAJ&hl=en"><i class="personal-icon clickable-icon ai ai-google-scholar ai-lg"></i></a>
-          <a href="https://orcid.org/0000-0001-6427-5423"><i class="personal-icon clickable-icon fab fa-orcid fa-lg"></i></a>
+          <a href="https://orcid.org/0000-0001-6427-5423"><i class="personal-icon clickable-icon fa-brands fa-orcid fa-lg"></i></a>
+          <a rel="me" href="https://econtwitter.net/@pipeton8"><i class="personal-icon clickable-icon fa-brands fa-mastodon fa-lg"></i></a>
         </div>
       </div>
 
@@ -190,7 +188,6 @@
             2019
           </div>
         </div>
-
       </div>
     </div>
   </section>
