Update Scholar profile

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <a href="http://github.com/pipeton8"><i class="personal-icon clickable-icon fa-brands fa-github fa-lg"></i></a>
           <a href="mailto:felipe.delcanto@icloud.com"><i class="personal-icon clickable-icon fa-solid fa-envelope fa-lg"></i></a>
           <a href="http://twitter.com/pipeton8"><i class="personal-icon clickable-icon fa-brands fa-twitter fa-lg"></i></a>
-          <a href="https://scholar.google.com/citations?user=-aRgXigAAAAJ&hl=en"><i class="personal-icon clickable-icon ai ai-google-scholar ai-lg"></i></a>
+          <a href="https://scholar.google.com/citations?user=Mav8ptUAAAAJ&hl=en&oi=sra"><i class="personal-icon clickable-icon ai ai-google-scholar ai-lg"></i></a>
           <a href="https://orcid.org/0000-0001-6427-5423"><i class="personal-icon clickable-icon fa-brands fa-orcid fa-lg"></i></a>
           <a rel="me" href="https://econtwitter.net/@pipeton8"><i class="personal-icon clickable-icon fa-brands fa-mastodon fa-lg"></i></a>
         </div>
