Include incoming PhD; add Inflation paper link

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <p>In particular, I am interested in how current techonogical advances (e.g., generative AI), are impacting: 1) the way firms interact, 2) the productivity and mobility of labor, and 3) the complementarity/substitutability between production inputs.
         </p>
 
-        <p>I am currently working as a Staff Associate at Columbia Business School. You can look at my <a href="documents/cv/Felipe Del Canto CV.pdf">CV here</a>.</p>
+        <p>In September, I will be joining Harvard Economics as a PhD student. In the meantime, I am working as a Staff Associate at Columbia Business School. You can look at my <a href="documents/cv/Felipe Del Canto CV.pdf">CV here</a>.</p>
       </div>
     </div>
   </section>
@@ -149,8 +149,9 @@
         <!-- @You shall not stack: How not to measure interdimensional dependence among the poor -->
         <div class="research-element">
           <div class="mr-auto paper-title">
-            The Micro Incidence of Macroeconomic Shocks: A Budget Set Approach
-            (<a class="paper-link" href="https://drive.google.com/file/d/1AqulbXwBO1506e0-QF6Ha9u1jQwXyPXw/view?usp=sharing">Slides</a>)
+            <a class="paper-link" href="https://www.dropbox.com/s/7ozqcfv8t916j4z/InflationRegressivity.pdf?dl=0">
+              The Micro Incidence of Macroeconomic Shocks: A Budget Set Approach
+            </a>
           </div>
           <div class="mr-auto paper-collaborators">
             with <a class="collaborator-link" href="https://sites.google.com/view/john-grigsby">John Grigsby</a>, <a class="collaborator-link" href="http://www.eric-qian.com">Eric Qian</a> and <a class="collaborator-link" href="https://www.conor-walsh.com">Conor Walsh</a>
