--- a/index.html
+++ b/index.html
@@ -100,19 +100,19 @@
           <a href="http://twitter.com/pipeton8"><i class="personal-icon clickable-icon fa-brands fa-twitter fa-lg"></i></a>
           <a href="https://scholar.google.com/citations?user=Mav8ptUAAAAJ&hl=en&oi=sra"><i class="personal-icon clickable-icon ai ai-google-scholar ai-lg"></i></a>
           <a href="https://orcid.org/0000-0001-6427-5423"><i class="personal-icon clickable-icon fa-brands fa-orcid fa-lg"></i></a>
-          <a rel="me" href="https://econtwitter.net/@pipeton8"><i class="personal-icon clickable-icon fa-brands fa-mastodon fa-lg"></i></a>
+          <!-- <a rel="me" href="https://econtwitter.net/@pipeton8"><i class="personal-icon clickable-icon fa-brands fa-mastodon fa-lg"></i></a> -->
         </div>
       </div>
 
       <!-- @ Text -->
       <div class="about-me-text col-lg-7 col-md-6">
-        <p> I am a Mathematician and Economist from PUC-Chile. My current research interests focus on the impacts of technology on competition and productivity, especially in the context of the digital economy.
+        <p> I am a Mathematician and Economist from PUC-Chile. My current interests lie on competition among firms in markets for digital goods or services.
         </p>
 
-        <p>In particular, I am interested in how current techonogical advances (e.g., generative AI), are impacting: 1) the way firms interact, 2) the productivity and mobility of labor, and 3) the complementarity/substitutability between production inputs.
+        <p>In particular, I am interested in: 1) how AI firms balance their presence in both the product market and the academic market; 2) how firms compete for user attention in digital markets; and 3) how markets within platforms (e.g., cosmetics for digital avatars in videogames) organize and how their firms compete.
         </p>
 
-        <p>In September, I will be joining Harvard Economics as a PhD student. In the meantime, I am working as a Staff Associate at Columbia Business School. You can look at my <a href="documents/cv/Felipe Del Canto CV.pdf">CV here</a>.</p>
+        <p>I am a PhD student in Economics at Harvard. Previously, I was working as a Staff Associate at Columbia Business School. You can look at my <a href="documents/cv/Felipe Del Canto CV.pdf">CV here</a>.</p>
       </div>
     </div>
   </section>
@@ -146,11 +146,11 @@
       <div class="research-subsection">
         <h1 class="section-title">Working Papers</h1>
 
-        <!-- @You shall not stack: How not to measure interdimensional dependence among the poor -->
+        <!-- @Are Inflationary Shocks Regressive? A Feasible Set Approach -->
         <div class="research-element">
           <div class="mr-auto paper-title">
             <a class="paper-link" href="https://www.dropbox.com/s/7ozqcfv8t916j4z/InflationRegressivity.pdf?dl=0">
-              The Micro Incidence of Macroeconomic Shocks: A Budget Set Approach
+              Are Inflationary Shocks Regressive? A Feasible Set Approach
             </a>
           </div>
           <div class="mr-auto paper-collaborators">
