--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <!-- @Are Inflationary Shocks Regressive? A Feasible Set Approach -->
         <div class="research-element">
           <div class="mr-auto paper-title">
-            Are Inflationary Shocks Regressive? A Feasible Set Approach
+            <a class="paper-link" href="https://www.dropbox.com/scl/fi/d39l75thyiq004w20kubt/main.pdf?rlkey=utey3sgj6j6uqiqweftbuzkqp&st=uy3884fl&dl=0"> Inflationary Shocks Regressive? A Feasible Set Approach </a> 
           </div>
           <div class="mr-auto paper-collaborators">
             with <a class="collaborator-link" href="https://sites.google.com/view/john-grigsby">John Grigsby</a>, <a class="collaborator-link" href="http://www.eric-qian.com">Eric Qian</a> and <a class="collaborator-link" href="https://www.conor-walsh.com">Conor Walsh</a>
