Update CV, publications order

--- a/index.html
+++ b/index.html
@@ -117,14 +117,31 @@
     </div>
   </section>
 
-
   <!-- @ Research Section -->
   <section class="left-aligned-section" id="research">
     <div class="container-fluid section-container">
 
-      <!-- @Published Papers -->
+
+      <!-- @Working Papers -->
       <div class="research-subsection">
-        <h1 class="section-title">Published Papers</h1>
+        <h1 class="section-title">Working Papers</h1>
+
+        <!-- @Are Inflationary Shocks Regressive? A Feasible Set Approach -->
+        <div class="research-element">
+          <div class="mr-auto paper-title">
+            <a class="paper-link" href="https://www.dropbox.com/s/7ozqcfv8t916j4z/InflationRegressivity.pdf?dl=0"> Are Inflationary Shocks Regressive? A Feasible Set Approach </a> 
+          </div>
+          <div class="mr-auto paper-collaborators">
+            with <a class="collaborator-link" href="https://sites.google.com/view/john-grigsby">John Grigsby</a>, <a class="collaborator-link" href="http://www.eric-qian.com">Eric Qian</a> and <a class="collaborator-link" href="https://www.conor-walsh.com">Conor Walsh</a>
+          </div>
+		  <div class="mr-auto paper-journal">
+			<i> Revise and Resubmit, Quarterly Journal of Economics </i>
+          </div>
+      </div>
+
+		<!-- @Published Papers -->
+      <div class="research-subsection">
+        <h1 class="section-title">Publications</h1>
 
         <!-- @The effect of regularization in portfolio selection problems -->
         <div class="research-element">
@@ -140,20 +157,6 @@
             <i>TOP</i>, Volume 29, 2021, Pages 156-176
           </div>
         </div>
-      </div>
-
-      <!-- @Working Papers -->
-      <div class="research-subsection">
-        <h1 class="section-title">Working Papers</h1>
-
-        <!-- @Are Inflationary Shocks Regressive? A Feasible Set Approach -->
-        <div class="research-element">
-          <div class="mr-auto paper-title">
-            <a class="paper-link" href="https://www.dropbox.com/s/7ozqcfv8t916j4z/InflationRegressivity.pdf?dl=0"> Inflationary Shocks Regressive? A Feasible Set Approach </a> 
-          </div>
-          <div class="mr-auto paper-collaborators">
-            with <a class="collaborator-link" href="https://sites.google.com/view/john-grigsby">John Grigsby</a>, <a class="collaborator-link" href="http://www.eric-qian.com">Eric Qian</a> and <a class="collaborator-link" href="https://www.conor-walsh.com">Conor Walsh</a>
-          </div>
       </div>
 
       <!-- @Other Research Papers -->
