Update CV, inflation paper

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             with <a class="collaborator-link" href="https://sites.google.com/view/john-grigsby">John Grigsby</a>, <a class="collaborator-link" href="http://www.eric-qian.com">Eric Qian</a> and <a class="collaborator-link" href="https://www.conor-walsh.com">Conor Walsh</a>
           </div>
 		  <div class="mr-auto paper-journal">
-			<i> Revise and Resubmit, Quarterly Journal of Economics </i>
+			<i> Conditionally Accepted, Quarterly Journal of Economics </i>
           </div>
       </div>
 
