Update CV, paragraph and social media links

--- a/index.html
+++ b/index.html
@@ -97,22 +97,21 @@
         <div class="mt-1">
           <a href="http://github.com/pipeton8"><i class="personal-icon clickable-icon fa-brands fa-github fa-lg"></i></a>
           <a href="mailto:felipe.delcanto@icloud.com"><i class="personal-icon clickable-icon fa-solid fa-envelope fa-lg"></i></a>
-          <a href="http://twitter.com/pipeton8"><i class="personal-icon clickable-icon fa-brands fa-twitter fa-lg"></i></a>
-          <a href="https://scholar.google.com/citations?user=Mav8ptUAAAAJ&hl=en&oi=sra"><i class="personal-icon clickable-icon ai ai-google-scholar ai-lg"></i></a>
-          <a href="https://orcid.org/0000-0001-6427-5423"><i class="personal-icon clickable-icon fa-brands fa-orcid fa-lg"></i></a>
+          <a href="http://twitter.com/pipeton8"><i class="personal-icon clickable-icon fa-brands fa-x-twitter fa-lg"></i></a>
+          <a rel="me" href="https://bsky.app/profile/pipeton8.bsky.social"><i class="personal-icon clickable-icon fa-brands fa-bluesky fa-lg"></i></a>          <a href="https://scholar.google.com/citations?user=Mav8ptUAAAAJ&hl=en&oi=sra"><i class="personal-icon clickable-icon ai ai-google-scholar ai-lg"></i></a>
+          <!-- <a href="https://orcid.org/0000-0001-6427-5423"><i class="personal-icon clickable-icon fa-brands fa-orcid fa-lg"></i></a> -->
           <!-- <a rel="me" href="https://econtwitter.net/@pipeton8"><i class="personal-icon clickable-icon fa-brands fa-mastodon fa-lg"></i></a> -->
+
         </div>
       </div>
 
       <!-- @ Text -->
       <div class="about-me-text col-lg-7 col-md-6">
-        <p> I am a Mathematician and Economist from PUC-Chile. My current interests lie on competition among firms in markets for digital goods or services.
+        <p> I am a third year PhD student in Economics at Harvard. I obtained my Bachelor in Mathematics and my Master's degree in Economics from PUC-Chile. Before joining Harvard, I worked as Staff Associate at Columbia Business School. You can look at my <b><a href="documents/cv/Felipe Del Canto CV.pdf">CV here</a></b>.</p>
+
+		<p> My main field is Industrial Organization, and I focus my research on competition among firms in markets for digital goods or services. In particular, I am interested in: 1) how firms compete for user engagement in digital markets; 2) how goods are endogenously determined in the presence of vertical relationship among firms, and 3) how markets within platforms (e.g., cosmetics for digital avatars in videogames) organize and how their firms compete.
         </p>
 
-        <p>In particular, I am interested in: 1) how AI firms balance their presence in both the product market and the academic market; 2) how firms compete for user attention in digital markets; and 3) how markets within platforms (e.g., cosmetics for digital avatars in videogames) organize and how their firms compete.
-        </p>
-
-        <p>I am a PhD student in Economics at Harvard. Previously, I was working as a Staff Associate at Columbia Business School. You can look at my <a href="documents/cv/Felipe Del Canto CV.pdf">CV here</a>.</p>
       </div>
     </div>
   </section>
