--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
       <div class="about-me-text col-lg-7 col-md-6">
         <p> I am a third year PhD student in Economics at Harvard. I obtained my Bachelor in Mathematics and my Master's degree in Economics from PUC-Chile. Before joining Harvard, I worked as Staff Associate at Columbia Business School. You can look at my <b><a href="documents/cv/Felipe Del Canto CV.pdf">CV here</a></b>.</p>
 
-		<p> My main field is Industrial Organization, and I focus my research on competition among firms in markets for digital goods or services. In particular, I am interested in: 1) how firms compete for user engagement in digital markets; 2) how goods are endogenously determined in the presence of vertical relationship among firms, and 3) how markets within platforms (e.g., cosmetics for digital avatars in videogames) organize and how their firms compete.
+		<p> My main field is Industrial Organization, and I focus my research on competition among firms in markets for digital goods or services. In particular, I am interested in: 1) how firms compete for user engagement in digital markets; 2) how goods are endogenously determined in the presence of vertical relationships among firms, and 3) how markets within platforms (e.g., cosmetics for digital avatars in videogames) organize and how their firms compete.
         </p>
 
       </div>
