--- a/index.html
+++ b/index.html
@@ -122,8 +122,12 @@
 
 
       <!-- @Working Papers -->
+      <!-- <div class="research-subsection">
+        <h1 class="section-title">Working Papers</h1> -->
+
+		<!-- @Published Papers -->
       <div class="research-subsection">
-        <h1 class="section-title">Working Papers</h1>
+        <h1 class="section-title">Publications</h1>
 
         <!-- @Are Inflationary Shocks Regressive? A Feasible Set Approach -->
         <div class="research-element">
@@ -134,13 +138,9 @@
             with <a class="collaborator-link" href="https://sites.google.com/view/john-grigsby">John Grigsby</a>, <a class="collaborator-link" href="http://www.eric-qian.com">Eric Qian</a> and <a class="collaborator-link" href="https://www.conor-walsh.com">Conor Walsh</a>
           </div>
 		  <div class="mr-auto paper-journal">
-			<i> Conditionally Accepted, Quarterly Journal of Economics </i>
+			<i> Forthcoming, Quarterly Journal of Economics </i>
           </div>
-      </div>
-
-		<!-- @Published Papers -->
-      <div class="research-subsection">
-        <h1 class="section-title">Publications</h1>
+      	</div>
 
         <!-- @The effect of regularization in portfolio selection problems -->
         <div class="research-element">
